# dotfiles

./: .gitattributes  .gitignore  .gitmodules  .mailmap  Brewfile  README.md  config.fish  crontab  install.sh  psqlrc  quakelive.cfg  rinstall.sh  slate.js  ssh_config  tmux-helper.sh  tmux.conf  update-bins.sh  zshrc
desktop/: XCompose  alacritty.yml  apply.sh  beets.yml  gtkrc.mine  startw
dev-base/: ackrc  apply.ps1  apply.sh  ctags  curlrc  gitconfig  gitignore  gpg-agent.conf  gpg.conf  hgrc  inputrc  peco.json  psqlrc  rc  ssh_config
emacs/: Cask  apply.sh  init-fns.el  init-ido.el  init-lisp.el  init.el
emacs.d/: Cask  init-fns.el  init-ido.el  init.el
firefox/: apply.sh  userChrome.css
freebsd/: common.sh  desktop.sh  devfs_desktop.rules  pf_desktop.conf  smtpd_desktop.conf
haskell/: apply.sh  config.cabal  ghci.conf.hs  hirc  stack.yaml
hexchat/: apply.sh  crawlcolor.py
kakoune/: apply.sh  kakrc
lein/: apply.sh  profiles.clj
lua/: apply.sh  luarocks.config.lua
mail/: apply.sh  edit-and-hashcash.py  mail.ca.pem  mailcap  msmtprc  muttrc  muttrc+osx  notmuch-config  osx.mailcap  view-attachment.sh
marelle-deps/: dev.pl  freebsd-common.pl  freebsd-desktop.pl  freebsd-server.pl  lang.pl  net.pl  osx-desktop.pl  server.pl  shell.pl  user.pl
marelle-tpls/: aliases  amavisd.conf  dnscrypt-proxy.sh  floatboth.com.zone  klaus.sh  klaus.wsgi.py  knot.conf  make.conf  make.desktop.conf  monitrc  nginx.conf  pf.conf  pf.desktop.conf  pf.server.conf  privoxy.conf  prosody.cfg.lua  smtpd.conf  sshd_config  supervisord.ini  torrc  unbound.conf  znc.conf  (+3 more)
(+99 files in other folders)
