remote-repo: hackage.haskell.org:http://hackage.haskell.org/packages/archive
remote-repo-cache: ~/.local/lib/cabal/packages
world-file: ~/.local/lib/cabal/world
build-summary: ~/.local/lib/cabal/logs/build.log
remote-build-reporting: anonymous

install-dirs user
  prefix: ~/.local/lib/cabal
  bindir: ~/.local/bin
